--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -265,69 +265,79 @@
       <div class="swiper-badges mySwiperBadges">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <div class="card">
-              <a href="https://www.seia.org/" >
-              <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-              </a>
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
-          <div class="card">
-            <a href="https://www.seia.org/" >
-            <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="card">
-          <a href="https://www.seia.org/" >
-          <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="swiper-slide">
-      <div class="card">
-        <a href="https://www.seia.org/" >
-        <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="swiper-slide">
-    <div class="card">
-      <a href="https://www.seia.org/" >
-      <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-      </a>
-    </div>
-  </div>
-</div>
-<div class="swiper-slide">
-  <div class="card">
-    <a href="https://www.seia.org/" >
-    <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-    </a>
-  </div>
-</div>
-</div>
-<div class="swiper-slide">
-  <div class="card">
-    <a href="https://www.seia.org/" >
-    <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-    </a>
-  </div>
-</div>
-</div>
-<div class="swiper-slide">
-  <div class="card">
-    <a href="https://www.seia.org/" >
-    <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-    </a>
-  </div>
-</div>
-</div>
+
         <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
