--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -276,8 +276,8 @@
           <div class="swiper-slide">
             <div class="col-md-2">
               <div class="card">
-                <a href="https://www.seia.org/" >
-                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                <a href="https://g.page/r/CYIionv7TzANEBM/review" >
+                <img src="assets/img/clients/client-1.png" class="card-img-top img-fluid" alt="">
                 </a>
               </div>
             </div>
@@ -285,8 +285,8 @@
           <div class="swiper-slide">
             <div class="col-md-2">
               <div class="card">
-                <a href="https://www.seia.org/" >
-                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                <a href="https://www.bbb.org/us/ca/van-nuys/profile/solar-installation/ca-solar-group-1216-1530416" >
+                <img src="assets/img/clients/client-2.png" class="card-img-top img-fluid" alt="">
                 </a>
               </div>
             </div>
@@ -294,8 +294,8 @@
           <div class="swiper-slide">
             <div class="col-md-2">
               <div class="card">
-                <a href="https://www.seia.org/" >
-                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                <a href="https://www.yelp.com/biz/california-solar-group-van-nuys-2" >
+                <img src="assets/img/clients/client-4.png" class="card-img-top img-fluid" alt="">
                 </a>
               </div>
             </div>
@@ -303,8 +303,8 @@
           <div class="swiper-slide">
             <div class="col-md-2">
               <div class="card">
-                <a href="https://www.seia.org/" >
-                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                <a href="https://www.tesla.com/powerwall" >
+                <img src="assets/img/clients/client-5.png" class="card-img-top img-fluid" alt="">
                 </a>
               </div>
             </div>
@@ -312,8 +312,8 @@
           <div class="swiper-slide">
             <div class="col-md-2">
               <div class="card">
-                <a href="https://www.seia.org/" >
-                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                <a href="https://www.tesla.com/powerwall" >
+                <img src="assets/img/clients/client-5.png" class="card-img-top img-fluid" alt="">
                 </a>
               </div>
             </div>
@@ -321,25 +321,69 @@
           <div class="swiper-slide">
             <div class="col-md-2">
               <div class="card">
-                <a href="https://www.seia.org/" >
-                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-                </a>
+                <a href="https://usa.recgroup.com/" >
+                <img src="assets/img/clients/client-6.png" class="card-img-top img-fluid" alt="">
+              </a>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://unirac.com/product/solarmount/" >
+                <img src="assets/img/clients/client-7.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="col-md-2">
               <div class="card">
-                <a href="https://www.seia.org/" >
-                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
-                </a>
+                <a href="https://enphase.com/installers/resources/ein" >
+                <img src="assets/img/clients/client-10.png" class="card-img-top img-fluid" alt="">
+              </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.gaf.com/en-us/roofing-contractors?utm_source=google&utm_medium=cpc&utm_campaign=Homeowner_Brand&utm_term=gaf%20master%20elite&gclid=Cj0KCQjwzdOlBhCNARIsAPMwjbxEEFpJtZMvzZRjnmMKtjuLFpFEJNlN5Joo1f-F-5Tb8e0xkRCdu0AaAoU5EALw_wcB&gclsrc=aw.ds" >
+                <img src="assets/img/clients/client-11.png" class="card-img-top img-fluid" alt="">
+              </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.certainteed.com/" >
+                <img src="assets/img/clients/client-12.png" class="card-img-top img-fluid" alt="">
+              </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.owenscorning.com/en-us" >
+                <img src="assets/img/clients/client-13.png" class="card-img-top img-fluid" alt="">
+              </a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="col-md-2">
+              <div class="card">
+                <a href="https://www.ironridge.com/" >
+                <img src="assets/img/clients/client-14.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+        <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
     </section>
@@ -390,7 +434,6 @@
                 <a href="https://usa.recgroup.com/" >
                 <img src="assets/img/clients/client-6.png" class="card-img-top img-fluid" alt="">
               </a>
-            </div>
             </div>
             <div class="col-md-2">
               <div class="card">
@@ -1319,14 +1362,14 @@ Great product, warranty, and company!
            grid: {
              rows: 2,
            },
-           spaceBetween: 30,
+           spaceBetween: 10,
            pagination: {
              el: ".swiper-pagination",
              clickable: true,
            },
            navigation: {
-       nextEl: ".swiper-button-next",
-       prevEl: ".swiper-button-prev",
+           nextEl: ".swiper-button-next",
+           prevEl: ".swiper-button-prev",
      },
          });
        </script>
