--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -323,7 +323,8 @@
               <div class="card">
                 <a href="https://usa.recgroup.com/" >
                 <img src="assets/img/clients/client-6.png" class="card-img-top img-fluid" alt="">
-              </a>
+                </a>
+              </div>
             </div>
           </div>
           <div class="swiper-slide">
@@ -380,6 +381,7 @@
               </div>
             </div>
           </div>
+
         </div>
 
         <div class="swiper-button-next"></div>
