--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -437,6 +437,7 @@
                 <img src="assets/img/clients/client-6.png" class="card-img-top img-fluid" alt="">
               </a>
             </div>
+            </div>
             <div class="col-md-2">
               <div class="card">
                 <a href="https://unirac.com/product/solarmount/" >
@@ -1365,14 +1366,14 @@ Great product, warranty, and company!
              rows: 2,
            },
            spaceBetween: 10,
+           navigation: {
+           nextEl: ".swiper-button-next",
+           prevEl: ".swiper-button-prev",
+           },
            pagination: {
              el: ".swiper-pagination",
              clickable: true,
            },
-           navigation: {
-           nextEl: ".swiper-button-next",
-           prevEl: ".swiper-button-prev",
-     },
          });
        </script>
 </body>
