--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -104,6 +104,9 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
+          <div class="mobile-menu-logo">
+            <img src="assets/img/logo.png" alt="img">
+          </div>
           <li class="dropdown"><a href="#"><span>About Us</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link scrollto" href="#about">Company</a></li>
