--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -105,7 +105,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <div class="mobile-menu-logo">
-            <img src="assets/img/logo.png" alt="img">
+            <img src="assets/img/logo-black.png" alt="img">
           </div>
           <li class="dropdown"><a href="#"><span>About Us</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
