--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -147,10 +147,13 @@
 
       <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
         <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-store-line"></i>
-            <h3><a href="electricity_bill_offset.html">100% Bill Offset See if You Qualify</a></h3>
-          </div>
+          <a href="electricity_bill_offset.html">
+            <div class="icon-box">
+              <i class="ri-store-line"></i>
+              <h3>100% Bill Offset See if You Qualify</h3>
+            </div>
+          </a>
+
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
