--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -156,30 +156,38 @@
 
         </div>
         <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="tax_credit.html">30% ITC Federal Tax Credit</a></h3>
-          </div>
+          <a href="tax_credit.html">
+            <div class="icon-box">
+              <i class="ri-bar-chart-box-line"></i>
+              <h3>30% ITC Federal Tax Credit</h3>
+            </div>
+          </a>
         </div>
 
         <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-sun-line"></i>
-            <h3><a href="premium_solar_and_battery_installer.html">Premium Solar and Battery Installer</a></h3>
-          </div>
+          <a href="premium_solar_and_battery_installer.html">
+            <div class="icon-box">
+              <i class="ri-sun-line"></i>
+              <h3>Premium Solar and Battery Installer</h3>
+            </div>
+          </a>
         </div>
         <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-money-dollar-circle-line"></i>
-            <h3><a href="increased_home_value.html">Up to 20% Home Value Increase</a></h3>
-          </div>
+          <a href="increased_home_value.html">
+            <div class="icon-box">
+              <i class="ri-money-dollar-circle-line"></i>
+              <h3>Up to 20% Home Value Increase</h3>
+            </div>
+          </a>
         </div>
 
         <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-flag-line"></i>
-            <h3><a href="made_in_usa.html">100% Made in the USA Solar Panels</a></h3>
-          </div>
+          <a href="made_in_usa.html">
+            <div class="icon-box">
+              <i class="ri-flag-line"></i>
+              <h3>100% Made in the USA Solar Panels</h3>
+            </div>
+          </a>
         </div>
       </div>
 
