--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1198,6 +1198,7 @@ Great product, warranty, and company!
               document.getElementById("successcontact").classList.remove("d-none"); // Make the element visible
               // You can optionally reset the form here
               document.getElementById("contactform").reset();
+              document.getElementById("contactform").style.display = 'none';
             } else {
               // Show the error message
               document.querySelector(".error-message").style.display = "block";
