--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1162,7 +1162,10 @@ Great product, warranty, and company!
                           <div class="loading" style="display: none;">Loading...</div>
                           <div class="error-message" style="display: none;">Error</div>
                           <div class="sent-message" style="display: none;">Thank You</div>
-                          <div id="successcontact" class="alert alert-success d-none" role="alert"></div>
+                          <div id="successcontact" class="alert alert-success d-none" role="alert">
+                            <p id="thanksmessage">
+                            </p>
+                          </div>
           </div>
 
         </div>
@@ -1192,9 +1195,9 @@ Great product, warranty, and company!
 
             if (xhr.status === 200) {
               // Show the success message
-              document.querySelector(".sent-message").style.display = "block";
+              document.querySelector(".sent-message").style.display = "none";
               document.querySelector(".error-message").style.display = "none";
-              document.getElementById("successcontact").textContent = xhr.responseText; // Display the response text
+              document.getElementById("thanksmessage").textContent = xhr.responseText; // Display the response text
               document.getElementById("successcontact").classList.remove("d-none"); // Make the element visible
               // You can optionally reset the form here
               document.getElementById("contactform").reset();
