--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -771,6 +771,90 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/residential/DJI_0363-min.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential 4</h4>
+                <p>Residential</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/residential/DJI_0363-min.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/residential/DJI_0454-min.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential 5</h4>
+                <p>Residential</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/residential/DJI_0454-min.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/residential/DJI_0041-min.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential 6</h4>
+                <p>Residential</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/residential/DJI_0041-min.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/residential/DJI_0636-min.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential 7</h4>
+                <p>Residential</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/residential/DJI_0636-min.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/residential/DJI_0120-min.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential 8</h4>
+                <p>Residential</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/residential/DJI_0120-min.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/residential/DJI_0300-min.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Residential 9</h4>
+                <p>Residential</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/residential/DJI_0300-min.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
