--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1319,8 +1319,8 @@ Great product, warranty, and company!
                 <strong>Email:</strong> <a href="mailto:info@casolargroup.com">info@casolgroup.com</a><br>
               </p>
               <div class="social-links mt-3">
-                <a href="https://twitter.com/casolargroup158" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/casolargroup/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.facebook.com/casolargroup" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/californiasolargroup/?igshid=MzRlODBiNWFlZA%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://www.linkedin.com/company/ca-solar-group/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
