--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -489,7 +489,7 @@
             <div class="col-md-2">
               <div class="card">
                 <a href="https://qcells.com/us/get-started/complete-energy-solution/ess" >
-                <img src="assets/img/clients/client-16.png" class="card-img-top img-fluid" alt="">
+                <img src="assets/img/clients/partnerqcells.jpg" style="height: 80px; display: flex; margin: 0 auto; width: auto" class="card-img-top img-fluid" alt="">
               </a>
               </div>
             </div>
