--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1320,6 +1320,7 @@ Great product, warranty, and company!
               </p>
               <div class="social-links mt-3">
                 <a href="https://www.facebook.com/casolargroup" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://twitter.com/CA_SolarGroup" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.instagram.com/californiasolargroup/?igshid=MzRlODBiNWFlZA%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://www.linkedin.com/company/ca-solar-group/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
